<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.roxy.mind_reader.currencyconverter.MainActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/usd_bdt"
            android:onClick="usd_activity"
            android:textColor="@color/colorPrimaryDark"
            android:id="@+id/btnUSD_BDT" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/eur_bdt"
            android:onClick="eur_activity"
            android:textColor="@color/colorPrimaryDark"
            android:id="@+id/btnEUR_BDT" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/inr_bdt"
            android:onClick="inr_activity"
            android:textColor="@color/colorPrimaryDark"
            android:id="@+id/btnINR_BDT" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pkr_bdt"
            android:onClick="pkr_activity"
            android:textColor="@color/colorPrimaryDark"
            android:id="@+id/btnPKR_BDT" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/qar_bdt"
            android:onClick="qar_activity"
            android:textColor="@color/colorPrimaryDark"
            android:id="@+id/btnQAR_BDT" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sar_bdt"
            android:onClick="sar_activity"
            android:textColor="@color/colorPrimaryDark"
            android:id="@+id/btnSAR_BDT" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/myr_bdt"
            android:onClick="myr_activity"
            android:textColor="@color/colorPrimaryDark"
            android:id="@+id/btnMYR_BDT" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/jod_bdt"
            android:onClick="jod_activity"
            android:textColor="@color/colorPrimaryDark"
            android:id="@+id/btnJOD_BDT" />
    </LinearLayout>
</RelativeLayout>
