<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.roxy.mind_reader.currencyconverter.INRActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:layout_weight="1"
                android:id="@+id/etINR" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/inr_text"
                android:layout_weight="2"
                android:textSize="20dp"
                android:id="@+id/tvINR" />


        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/convert_cmd"
            android:onClick="inr_convert"
            android:textColor="@color/colorPrimaryDark"
            android:id="@+id/btnConvert" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/bdt_text"
            android:textColor="@color/colorAccent"
            android:id="@+id/tvBDT" />
    </LinearLayout>

</RelativeLayout>
